--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Игнорирование каталога node_modules
 node_modules/
 
+# Игнорирование файла ключей
+config/keyring.yml
+
 # Игнорирование устаревших файлов
 oldfiles/
 
@@ -16,5 +19,6 @@ logs/
 # Игнорирование локальных настроек eslint
 .eslintrc.json
 
-# Игнорирование всех файлов с расширением .sh
+# Игнорирование исполняемых файлов
 *.sh
+*.bat
