--- a/db/config/khtapi.conf
+++ b/db/config/khtapi.conf
@@ -2,7 +2,7 @@ module.exports = {
   username: 'khtapi',
   password: process.env.DB_KHTAPI_PASS,
   database: 'khtapi',
-  host: 'localhost',
+  host: 'core.khudoley.pro',
   port: 22326,
   dialect: 'postgres'
 };
