--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "async-mutex": "^0.4.0",
     "axios": "^1.4.0",
     "bottleneck": "^2.19.5",
     "express": "^4.18.2",
@@ -7,7 +8,7 @@
     "js-yaml": "^4.1.0",
     "p-queue": "^7.3.4",
     "pg": "^8.11.3",
-    "sequelize": "^6.35.1",
+    "sequelize": "^6.35.2",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
